fluxcd-dev/customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    service: customer
spec:
  selector:
    service: customer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
