fluxcd-dev/fallback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fallback
  labels:
    app: fallback
    service: customer
    topology.kubernetes.io/zone: fallback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fallback
  template:
    metadata:
      labels:
        app: fallback
        service: customer
        topology.kubernetes.io/zone: fallback
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html-volume
        configMap:
          name: fallback-config
          items:
            - key: index.html
              path: index.html
      - name: config-volume
        configMap:
          name: fallback-config
          items:
            - key: default.conf
              path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: fallback
  labels:
    app: fallback
    service: customer
spec:
  selector:
    app: fallback
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
