fluxcd-dev/customer-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: customer-retry-404
spec:
  workloadSelector:
    labels: {} # Apply to all sidecars
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      context: SIDECAR_OUTBOUND
      routeConfiguration:
        vhost:
          name: "customer.default.svc.cluster.local:80"
          route:
            name: "customer-route"
    patch:
      operation: MERGE
      value:
        route:
          retry_policy:
            retry_on: "5xx,retriable-status-codes"
            retriable_status_codes: [404]
            num_retries: 3
            per_try_timeout: 2s
            retry_host_predicate:
            - name: "envoy.retry_host_predicates.previous_hosts"
            host_selection_retry_max_attempts: 5
