fluxcd-dev/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: push-cache
spec:
  hosts:
    - dev.k8s
  gateways:
    - istio-ingress/k8s-gateway
    - mesh # applies to all the sidecars in the mesh
  http:
    - name: push-cache
      match:
        - uri:
            prefix: /cache
      route:
        - destination:
            host: push-cache-backend
